# efr32_proj

./: README.md
blink/: CMakeLists.txt  main.c
blink-tyzs3/: CMakeLists.txt  config.h  main.c
button/: CMakeLists.txt
button-tyzs3/: CMakeLists.txt
button-tyzs3/inc/: InitDevice.h
button-tyzs3/src/: main.c
button/src/: main.c
ds18b20/: CMakeLists.txt  main.c
ds18b20beacon/: CMakeLists.txt  main.c
extra/: CMakeLists.txt
extra/inc/: ds18b20.h  i2c_interface.h  led.h  radio.h  timer.h  uart0.h
extra/src/: ds18b20.c  i2c_interface.c  led.c  radio.c  timer.c  uart0.c
helloworld/: CMakeLists.txt  main.c
helloworld-tyzs3/: CMakeLists.txt
helloworld-tyzs3/src/: InitDevice.c  main.c
helloworld/inc/: config.h
helloworld/src/: InitDevice.c  main.c
i2c_test/: CMakeLists.txt
i2c_test/inc/: oled_interface.h
i2c_test/src/: main.c  oled_interface.c
ieee802154/: CMakeLists.txt  config.h  main.c
ieee802154-tyzs3/: CMakeLists.txt  main.c
lis3dh/: CMakeLists.txt
lis3dh/inc/: bmp.h  lis3dh.h
lis3dh/src/: InitDevice.c  lis3dh.c  main.c  oled_interface.c  sh1106g.c
sh1106g_oled/: CMakeLists.txt
sh1106g_oled/src/: main.c
spi_flash/: CMakeLists.txt
spi_flash/src/: main.c
toolchain/: flash-EFR32MG13PXXXF512.in  jlink.cmake  reset-EFR32MG13PXXXF512.jlink
tradfri-sniffer/: CMakeLists.txt  config.h  main.c
tyzs3-sniffer/: CMakeLists.txt  config.h  main.c
